# create-lol-v2t

./: .gitignore  Pipfile  pyproject.toml
caption/: choose.py  divide.py  divide.sh  make_annotation.py  make_annotation.sh  make_annotation_parallel.py  make_annotation_parallel.sh  make_caption.py  make_caption.sh  make_duration.py  remove_unused_video.py  split.py
dataset/: abbreviation.json  dataset.py  detect.py  dictionary.json  feature_extraction.py  hp_tuning.py  lolworldsdata.json  main.sh  main_2d.sh  make_dataset.py  make_dataset.sh  train.py  train_2d.py
dataset/network/: C3D.py
dataset/precision_recall_graph/: pr.py
is_useful/2D/: main_2d.sh  train_2d.py
making_dataset/: extract.py  main.sh
making_dataset/precision_recall_graph/: pr.sh
progress/: 202004_progress.md  202005_progress.md  202006_progress.md  progress.md
tools/: analyze_vocab.py  duration.py  get_information.py  opticalflow.py  preprocess.py  validation.py
