[tool.poetry]
name = "generate-commentary"
version = "0.1.0"
description = ""
authors = ["Tanaka <tsunehiko@fuji.waseda.jp>"]

[tool.poetry.dependencies]
python = "3.6.9"
future = "^0.18.2"
Click = "^7.1.2"
tqdm = "^4.46.1"
opencv-python = "^4.2.0"
pandas = "^1.0.4"
sklearn = "^0.0"
numpy = "1.16.4"
tensorboardx = "^2.0"
tensorboard = "2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
